2009-02-08 [mones]	3.7.0cvs56

	* src/matcher.h
		Fix build for bison 2.4.1

2009-02-06 [holger]	3.7.0cvs55

	* src/prefs_common.c
	* src/prefs_common.h
	* src/printing.c
		Fix restoring of custom page setups for printing by
		temporarily caching the settings.
		This is a workaround for Gnome Bug #39018, and fixes
		Claws Mail Bug #1840.

2009-02-06 [colin]	3.7.0cvs54

	* src/mainwindow.c
		Fix hardcoded Shift-Q quits. Fixes
		bug 1838, 'Claws-Mail sometimes quits 
		when attempting to type a capital Q'

2009-01-31 [paul]	3.7.0cvs53

	* src/compose.c
		revert 3.7.0cvs49, until there is time to find out
		why it causes a nasty crash!

2009-01-31 [paul]	3.7.0cvs52

	* src/mainwindow.c
		1 string that was forgotten for translation

2009-01-31 [paul]	3.7.0cvs51

	* src/messageview.c
		2 strings that were forgotten for translation

2009-01-31 [paul]	3.7.0cvs50

	* src/gtk/prefswindow.c
		build prefs tree in a slightly smarter way -
		fix bug where if path[0] had same name as
		path[1], (like in the de translation), path[1]
		was lost and not shown in the window

2009-01-31 [paul]	3.7.0cvs49

	* src/compose.c
		fix bug 1836, 'Quoted text still blue after
		removal of quote-character'
		comment out some debug_print's that needlessly
		slow things down
	* src/undo.c
		comment out a debug_print that needlessly slows
		things down

2009-01-31 [paul]	3.7.0cvs48

	* src/summaryview.c
		fix bug 1834, '"semi"-selection when collapsing thread'

2009-01-31 [paul]	3.7.0cvs47

	* src/prefs_compose_writing.c
	* src/prefs_message.c
		move 'quote_chars' pref to where it should be

2009-01-30 [paul]	3.7.0cvs46

	* src/summaryview.c
		fix updating of popup menu sensitivity

2009-01-28 [paul]	3.7.0cvs45

	* tools/filter_conv_new.pl
		move 'move' and 'delete' to end of @actions
		so that they are always final actions in the
		generated filtering rule

2009-01-27 [paul]	3.7.0cvs44

	* src/messageview.c
		always select text/calendar mimepart if suitable
		plugin (i.e. vCalendar) is available