@@ -3718,3 +3718,4 @@
 ( cvs diff -u -r 1.274.2.297 -r 1.274.2.298 src/mainwindow.c;  ) > 3.7.0cvs54.patchset
 ( cvs diff -u -r 1.204.2.185 -r 1.204.2.186 src/prefs_common.c;  cvs diff -u -r 1.103.2.121 -r 1.103.2.122 src/prefs_common.h;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/printing.c;  ) > 3.7.0cvs55.patchset
 ( cvs diff -u -r 1.39.2.16 -r 1.39.2.17 src/matcher.h;  ) > 3.7.0cvs56.patchset
+( cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/printing.c;  cvs diff -u -r 1.9.2.48 -r 1.9.2.49 src/common/defs.h;  ) > 3.7.0cvs57.patchset
