@@ -1,3 +1,9 @@
+2009-02-10 [holger]	3.7.0cvs57
+
+	* src/printing.c
+	* src/common/defs.h
+		Move filename define for printing page setup cache to defs.h
+
 2009-02-08 [mones]	3.7.0cvs56
 
 	* src/matcher.h
